Update nginx config & use variables from the deploy.rb file for more config

--- a/templates/etc/nginx/front.conf
+++ b/templates/etc/nginx/front.conf
@@ -33,16 +33,17 @@ server {
   # path for static files
   root <%= @spontaneous %>/revisions/current;
 
+  # remove trailing slashes
   rewrite ^/(.*)/$ /$1 permanent;
 
-  location ^~ /media/ {
-    alias       <%= @spontaneous %>/media/;
-    expires     max;
+  location /media {
+    alias       <%= @spontaneous %>/media;
+    add_header  Cache-Control "public, max-age=31536000";
   }
 
-  location ^~ /rev/ {
-    alias       <%= @spontaneous %>/revisions/current/rev/;
-    expires     max;
+  location /assets {
+    alias       <%= @spontaneous %>/revisions/current/assets;
+    add_header  Cache-Control "public, max-age=31536000";
   }
 
   # Prefer to serve static files directly from nginx to avoid unnecessary
