--- a/templates/etc/nginx/nginx.conf
+++ b/templates/etc/nginx/nginx.conf
@@ -1,4 +1,4 @@
-daemon                  off;
+daemon                  off; # nginx is being managed by runit so needs to stay in the fg
 user                    www-data;
 #A bit higher priority
 worker_priority         -5;
@@ -59,6 +59,8 @@ http {
   tcp_nopush                  on;
   tcp_nodelay                 off;
 
+  types_hash_max_size           2048;
+  server_names_hash_bucket_size 64;
 
   gzip  on;
   gzip_http_version       1.0;
