Install & configure Wal-E backup of db

--- a/templates/etc/postgresql/postgresql.conf
+++ b/templates/etc/postgresql/postgresql.conf
@@ -150,8 +150,8 @@ shared_buffers = <%= @config[:shared_buffers] %>MB			# min 128kB
 
 # - Settings -
 
-#wal_level = minimal			# minimal, archive, or hot_standby
-					# (change requires restart)
+wal_level = archive			# minimal, archive, or hot_standby
+					              # (change requires restart)
 #fsync = on				# turns forced synchronization on or off
 #synchronous_commit = on		# synchronization level; on, off, or local
 #wal_sync_method = fsync		# the default is the first option
@@ -178,11 +178,11 @@ shared_buffers = <%= @config[:shared_buffers] %>MB			# min 128kB
 
 # - Archiving -
 
-#archive_mode = off		# allows archiving to be done
-				# (change requires restart)
-#archive_command = ''		# command to use to archive a logfile segment
-#archive_timeout = 0		# force a logfile segment switch after this
-				# number of seconds; 0 disables
+archive_mode = on		# allows archiving to be done
+				            # (change requires restart)
+archive_command = '/usr/bin/chpst -e /etc/wal-e.d/env /usr/local/bin/wal-e wal-push %p'		# command to use to archive a logfile segment
+archive_timeout = 60		# force a logfile segment switch after this
+				                # number of seconds; 0 disables
 
 
 #------------------------------------------------------------------------------
