Add optional http basic auth

--- a/templates/etc/nginx/front.conf
+++ b/templates/etc/nginx/front.conf
@@ -28,6 +28,11 @@ server {
 
   server_name <%= @opts[:domain] %>;
 
+  <% if (auth = @opts.fetch(:nginx_opts, {})[:auth]) %>
+  auth_basic "<%= auth[:domain] %>";
+  auth_basic_user_file <%= auth[:htpasswd] %>;
+  <% end -%>
+
   client_max_body_size 4G;
 
   # path for static files
