Update for ubuntu 16 and add letsencrypt certs

--- a/templates/etc/nginx/front.conf
+++ b/templates/etc/nginx/front.conf
@@ -9,22 +9,19 @@ upstream <%= @opts[:site_id] %>_front_server {
 }
 
 server {
-  server_name www.<%= @opts[:domain] %>;
-  return 301 $scheme://<%= @opts[:domain] %>;
+    listen 80;
+    listen [::]:80;
+    rewrite ^(.*)$ https://<%= @opts[:domain] %>$1 permanent;
 }
 
 server {
-  # enable one of the following if you're on Linux or FreeBSD
-  listen 80; # for Linux
-  # listen 80 default accept_filter=httpready; # for FreeBSD
+  include /etc/nginx/ssl.conf;
+  server_name www.<%= @opts[:domain] %>;
+  rewrite ^(.*)$ https://<%= @opts[:domain] %>$1 permanent;
+}
 
-  # If you have IPv6, you'll likely want to have two separate listeners.
-  # One on IPv4 only (the default), and another on IPv6 only instead
-  # of a single dual-stack listener.  A dual-stack listener will make
-  # for ugly IPv4 addresses in $remote_addr (e.g ":ffff:10.0.0.1"
-  # instead of just "10.0.0.1") and potentially trigger bugs in
-  # some software.
-  # listen [::]:80; # deferred or accept_filter recommended
+server {
+  include /etc/nginx/ssl.conf;
 
   server_name <%= @opts[:domain] %>;
 
