--- a/templates/etc/nginx/nginx.conf
+++ b/templates/etc/nginx/nginx.conf
@@ -1,4 +1,4 @@
-daemon                  off; # nginx is being managed by runit so needs to stay in the fg
+# daemon                  off; # nginx is being managed by runit so needs to stay in the fg
 user                    www-data;
 #A bit higher priority
 worker_priority         -5;
