--- a/templates/etc/nginx/back.conf
+++ b/templates/etc/nginx/back.conf
@@ -3,34 +3,17 @@ upstream <%= @opts[:site_id] %>_back_server {
   server unix:<%= @back_socket %>;
 }
 
-<% if @opts[:secure] -%>
 # redirect insecure connections to the CMS back to the secure version
 server {
   listen      80;
+  listen      [::]:80;
   server_name <%= @opts[:cms_host] %>;
   rewrite     ^(.*)$ https://<%= @opts[:cms_host] %>$1 permanent;
 }
-<% end %>
 
 server {
   # enable one of the following if you're on Linux or FreeBSD
-  <% if @opts[:secure] -%>
-  listen 443; # for Linux
-  <% else %>
-  listen 80; # for Linux
-  <% end %>
-
-  # If you have IPv6, you'll likely want to have two separate listeners.
-  # One on IPv4 only (the default), and another on IPv6 only instead
-  # of a single dual-stack listener.  A dual-stack listener will make
-  # for ugly IPv4 addresses in $remote_addr (e.g ":ffff:10.0.0.1"
-  # instead of just "10.0.0.1") and potentially trigger bugs in
-  # some software.
-  <% if @opts[:secure] -%>
-  # listen [::]:443; # deferred or accept_filter recommended
-  <% else %>
-  # listen [::]:80; # deferred or accept_filter recommended
-  <% end -%>
+  include /etc/nginx/ssl.conf;
 
   server_name <%= @opts[:cms_host] %>;
 
